# hashlock-sdk

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  release-npm.yml  release-pypi.yml
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE.ru.md
examples/: README.md  quickstart.py  quickstart.ts
examples/fireblocks/: README.md  sign_evm.py  sign_evm.ts
python/: README.md  pyproject.toml
python/hashlock/: __init__.py  client.py  errors.py  secret.py  webhooks.py  ws.py
scripts/: vendor-schema.mjs
src/: client.ts  errors.ts  experimental.ts  hashlock.ts  index.ts  instant.ts  principal.ts  types.ts  ws.ts
src/__tests__/: hashlock.test.ts  instant.test.ts  schema-validate.test.ts
test/fixtures/: schema.graphql  schema.subscriptions.graphql
typescript/: README.md  package.json  tsconfig.json
typescript/src/: client.ts  errors.ts  index.ts  secret.ts  types.ts  webhooks.ts  ws.ts
