[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hashlock-sdk"
version = "1.0.0"
description = "Python SDK for the Hashlock Markets developer API — non-custodial cross-chain atomic swaps (BTC <-> EVM/TRON) over sealed RFQ + HTLC."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["hashlock", "atomic-swap", "htlc", "bitcoin", "cross-chain", "otc", "defi"]
dependencies = ["httpx>=0.24"]

[project.optional-dependencies]
ws = ["websockets>=12"]

[project.urls]
Homepage = "https://github.com/Hashlock-Tech/hashlock-sdk"

[tool.hatch.build.targets.wheel]
packages = ["hashlock"]
